z-index issues fixed

--- a/styles.css
+++ b/styles.css
@@ -49,17 +49,17 @@ body {
 }
 
 #container.crash {
-  border-color:red;
+  border-color:rgba(255, 0, 0, 0.5);
   animation: blink 0.5s;
   animation-iteration-count: 6;
 }
 #pole_1.poleCrash, #pole_2.poleCrash {
-  background-color:red;
+  background-color:rgba(255, 0, 0, 0.5);
   animation: poleblink 0.5s;
   animation-iteration-count: 6;
 }
 @keyframes blink { 50% { border-color:#fff ; }  }
-@keyframes poleblink { 50% { background-color:rgb(224, 77, 77) ; }  }
+@keyframes poleblink { 50% { background-color:rgba(255, 0, 0, 0.9) ; }  }
 
 #container {
   position: relative;
@@ -116,6 +116,7 @@ body {
   border-radius:50%;
   transition:transform 0.3s ease;
   display:none;
+  z-index: 9998;
 }
 #container #flap:active {
   transform:scale(0.88);
@@ -126,9 +127,9 @@ body {
 #container #gameover  {
   width:50%;
   height:90px;
-  background-color: red;
-  animation: gameover 0.5s;
-  animation-iteration-count: 6;
+  background-color: rgba(255, 0, 0, 0.5);
+  animation: gameover 1s;
+  animation-iteration-count: 3;
   color:white;
   border-radius: 10px;
   padding:5px;
@@ -141,7 +142,7 @@ body {
   transform:translate(-50%,-50%);
   display:none;
 }
-@keyframes gameover { 50% { background-color:rgb(243, 84, 84) ; }  }
+@keyframes gameover { 50% { background-color:rgba(255, 0, 0, 0.9) ; }  }
 
 #container #gameover h2 {
   text-align:center;
@@ -164,7 +165,7 @@ body {
   top: 20%;
   left: 10%;
   bottom:80%;
-  z-index: 9999;
+  z-index: 9997;
 }
 
 .pole {
@@ -173,6 +174,7 @@ body {
   width: 50px;
   background-color: #0b52ff;
   right: -50px;
+  z-index: 9996;
 }
 #pole_1 {
   top: 0;
